fix heading content alignment

--- a/Styles/logo.css
+++ b/Styles/logo.css
@@ -18,10 +18,10 @@
   
 
 .heading{
-    max-width: 900px;
-    text-align: center;
-    margin: 0 auto;
-    margin-top: 100px;
+    /* max-width: 900px; */
+    /* text-align: center; */
+    /* margin: 309px 267px 240px 267px; */
+        
 }
 .heading-content{
     font-family: "Raleway", sans-serif;
@@ -29,6 +29,7 @@
     font-size: 65px;
     color: #181818;
     margin-bottom: 40px;
+    
 }
 
 .nav-logo{
@@ -62,6 +63,7 @@ div {
     background-image:url('../Assets/Hero-bg.png');
     width: 100%;
     height: 900px;
+    text-align: center;
 }
 .heading{
     margin: 250px 260px;
@@ -347,5 +349,58 @@ div {
 .group{
     text-align: left;
 }
+
+
+/* Footer section styles */
+.footer {
+    width: 100%;
+    height: 428px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+}
+
+.footer-container {
+    text-align: center;
+    max-width: 800px;
+}
+
+.footer-logo {
+    font-family: "Inter", sans-serif;
+    font-weight: 900;
+    font-size: 100px;
+    color: #4E47FF;
+    margin: 0 0 40px 0;
+   
+}
+
+.footer-description {
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: #8987A1;
+    line-height: 1.5;
+    margin: 0 0 40px 0;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.footer-nav {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+}
+
+.footer-link {
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: #8987A1;
+    text-decoration: none;
+}
+
 
 
